# respiraCare-ICU

./: .dockerignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
app/: config.py  main.py  models.py
app/environment/: episode.py  patient.py  patient_generator.py  ward.py
app/graders/: crisis_grader.py  readiness_grader.py  shift_grader.py
app/problems/: alarm_fatigue.py  ethical_triage.py  fleet_management.py  handover.py  vap_prevention.py
app/reward/: reward_function.py
app/tasks/: task1_readiness.py  task2_optimization.py  task3_crisis.py
clinical_data/: accp_weaning_criteria.json  alarm_patterns.json  sofa_scoring_table.json  vap_bundle_checklist.json
server/: app.py
tests/: test_api_endpoints.py  test_graders.py  test_patient_generator.py  test_reward_function.py
